docs(readme): modernize landing page in NYX style
Centered hero with CI/tech badges, anchor nav, capability tables with
honest scope callout, ASCII architecture, multi-mode quick start.
Replaces the mixed-language wall-of-text layout.