@@ -1,165 +1,318 @@
-# Aegis XDR / SIEM Ecosystem
+<h1 align="center">Aegis Ecosystem</h1>
+<p align="center">
+  <strong>Open-Source XDR / SIEM Platform</strong><br/>
+  Endpoint detection &amp; response, multi-source SIEM ingestion, Sigma rules, SOAR playbooks and OSINT enrichment — in one local-first stack.
+</p>
 
-Aegis is a local XDR/SIEM lab made of four main services:
+<p align="center">
+  <a href="#overview">Overview</a> •
+  <a href="#features">Features</a> •
+  <a href="#quick-start">Quick Start</a> •
+  <a href="#architecture">Architecture</a> •
+  <a href="#agents--telemetry">Agents</a> •
+  <a href="#api-endpoints">API</a> •
+  <a href="#security-notes">Security</a> •
+  <a href="#development">Development</a>
+</p>
 
-| Component | Stack | Role |
-| --- | --- | --- |
-| `aegis-brain` | FastAPI, SQLAlchemy, PostgreSQL, Redis | API, auth, telemetry processing, rules, alerts, VaultX, AI/OSINT, SOAR playbooks, syslog ingestion, audit logging |
-| `aegis-link` | Spring Boot | Agent/syslog ingestion gateway; pushes events to Redis |
-| `aegis-guard` | Java | Endpoint security agent and mitigation command consumer |
-| `NodeTrace` | Python | Host telemetry agent for CPU/RAM/process/users/network flows |
-| `frontend` | React | Dashboard for alerts, agents, rules, VaultX, OSINT, AI, playbooks, syslog viewer, audit log |
+<p align="center">
+  <a href="https://github.com/Terminalkid09/aegis-ecosystem/actions/workflows/ci.yml"><img src="https://github.com/Terminalkid09/aegis-ecosystem/actions/workflows/ci.yml/badge.svg" alt="CI" /></a>
+  <img src="https://img.shields.io/badge/python-3.12-3776AB?style=flat-square&logo=python&logoColor=white" alt="Python 3.12" />
+  <img src="https://img.shields.io/badge/java-21-orange?style=flat-square&logo=openjdk&logoColor=white" alt="Java 21" />
+  <img src="https://img.shields.io/badge/spring%20boot-3-6DB33F?style=flat-square&logo=spring&logoColor=white" alt="Spring Boot" />
+  <img src="https://img.shields.io/badge/react-19-61dafb?style=flat-square&logo=react&logoColor=white" alt="React 19" />
+  <img src="https://img.shields.io/badge/postgres-16-4169E1?style=flat-square&logo=postgresql&logoColor=white" alt="PostgreSQL 16" />
+  <img src="https://img.shields.io/badge/redis-7-DC382D?style=flat-square&logo=redis&logoColor=white" alt="Redis 7" />
+  <img src="https://img.shields.io/badge/platform-windows%20%7C%20linux-brightgreen?style=flat-square" alt="Cross-platform" />
+</p>
 
-**In a hurry?** → [Quick Start](#quick-start): one command, from clone to a working platform.
+---
 
-## Table of contents
+## Overview
 
-- [Architecture](#architecture)
-- [Quick Start](#quick-start) — install, update, requirements, profiles
-- [Authentication Model](#authentication-model)
-- [Database](#database) · [Redis](#redis) · [Agents](#agents)
-- [Telemetry Collection Layers](#telemetry-collection-layers)
-- [Features](#features) — detection, YARA/FIM, OSINT/AI, SOAR, SIEM, Aegis Total
-- [API Endpoints](#api-endpoints)
-- [Security Notes](#security-notes)
-- [Pilot & Enterprise Readiness](#pilot--enterprise-readiness)
-- [References](#references)
+**Aegis** is an open-source, local-first XDR/SIEM platform for security labs, pilots and small teams. It combines endpoint agents, kernel-level telemetry (eBPF on Linux, ETW on Windows), multi-source log ingestion, deterministic detection with Sigma and custom rules, MITRE ATT&CK mapping, automated SOAR remediation and OSINT/AI enrichment into a single, cohesive product — deployed with **one command**.
 
-## Architecture
+| Area | Capabilities |
+|------|-------------|
+| **Endpoint (XDR)** | Guard (Java) + NodeTrace (Python) agents: process lineage, persistence, masquerading, security-control tampering; 9 remediation actions (kill, quarantine, isolate, sinkhole…) |
+| **Kernel telemetry** | eBPF probes on Linux (`sched_process_exec`, TCP via ringbuf, verified 300/300 events on kernel 6.6); ETW kernel providers on Windows (user-mode consumer, no driver, no signing) |
+| **SIEM ingestion** | Syslog (RFC 3164/5424), Windows Event Log, Zeek, Suricata, nginx/Squid, pfSense/iptables — one pipeline, parser auto-detection, real UDP/TCP listener |
+| **Detection** | 21 static rules with MITRE mapping, custom AND/OR rules, **Sigma engine** (modifiers, mapping, fail-loud exclusions), threshold + sequence correlation over Redis windows |
+| **SOAR** | 12 playbook action types with trigger conditions, execution history, composite `eradicate` chain |
+| **Static analysis** | Aegis Total: PE/ELF/Mach-O/Office/PDF/archives/APK/LNK… with YARA, entropy, imports, IOCs and disassembly — nothing is rejected, everything is analyzed |
+| **FIM** | Per-agent file integrity monitoring watchlist (Run keys, tasks, services, hosts, cron, systemd) via WatchService + SHA-256 baseline |
+| **OSINT + AI** | VirusTotal/Shodan/AbuseIPDB auto-enrichment; pluggable AI provider (Ollama local / Gemini / OpenAI) chosen from the dashboard, with data-exit control |
+| **Notifications** | Telegram alerts + heartbeat (works fully local), browser notifications, realtime alert WebSocket |
+| **Interop** | OCSF 1.4.0 export (Detection Finding / Process Activity, JSON/NDJSON), structured event search, audit trail, Prometheus + Grafana profile |
 
-```text
-Endpoints / Syslog
-       |
-       v
-Aegis-Link  ---> Redis queue/cache ---> Aegis-Brain ---> PostgreSQL
-                                           |
-                                           v
-                                      React Dashboard
-```
+> **Honest scope.** Detection is deterministic (signatures + heuristics + anomalies, no ML). Zeek/Suricata/Squid/pfSense sources are demonstrated with synthetic real-format samples (`scripts/siem_demo.py`), not production traffic. Single-node by design; HA overlay documents scale-readiness.
 
-**Topology.** Each agent knows a single endpoint (`AEGIS_BRAIN_URL` for
-enrollment, commands and PKI; `AEGIS_GATEWAY_URL` for high-rate telemetry via
-`aegis-link`, which queues into Redis for the brain to consume). Dashboards are
-just browsers reading the brain: adding an operator is a registration, adding a
-host is an enrollment — agents never need to know about dashboards, and
-dashboards never talk to agents.
+---
+
+## Features
+
+### 🛡️ Endpoint Detection & Response
+
+| Module | Description |
+|--------|-------------|
+| **Static rules** | 21 deterministic rules: process lineage, masquerading, suspicious paths, persistence (Run keys, tasks), AV/Defender tampering, event-log clearing, recovery destruction. `GET /api/v1/rules/static` is the live source of truth |
+| **MITRE ATT&CK** | Every rule and alert carries tactic, technique and technique ID (T1059, T1134, T1036, T1562, T1070.001, T1490…); badges link to the ATT&CK pages |
+| **Custom rules** | AND/OR multi-condition rules, hostname/IP whitelists, auto-remediation actions, rule testing endpoint |
+| **Remediation** | 9 agent commands — `KILL_PROCESS`, `KILL_PROCESS_TREE`, `BLOCK_IP`, `BLOCK_IP_TEMPORAL`, `QUARANTINE_BINARY`, `REMOVE_PERSISTENCE`, `DNS_SINKHOLE`, `COLLECT_IOC`, `ISOLATE_HOST` — plus `VERIFY` |
+| **SOAR playbooks** | Trigger conditions on severity/event/process; automatic execution on matching alerts; 12 action types including composite `eradicate` (COLLECT_IOC → QUARANTINE → KILL_TREE → REMOVE_PERSISTENCE → VERIFY); full execution history |
+
+### 📡 SIEM
+
+| Module | Description |
+|--------|-------------|
+| **Log ingestion** | One pipeline for every source: `POST /api/v1/ingest/{source}` → parse → normalize → *same* detection → alert → SOAR chain used by agents. A log-raised alert triggers playbooks — one product, not two |
+| **Parsers** | Auto-detected from payload shape: syslog (RFC 3164/5424), JSON/NDJSON, Windows Event (4624/4625/4688/4697/4720/7045/1102…), Zeek (conn/dns/http/ssl), Suricata `eve.json`, nginx/Squid/Apache, pfSense/iptables. `GET /api/v1/ingest/catalog` drives the UI |
+| **Syslog listener** | Optional UDP **and** TCP listener (`SYSLOG_ENABLED`, default off, bound to `127.0.0.1` unless widened) — point rsyslog or a firewall straight at the brain; bounded queue, storms are counted and dropped, never accumulated |
+| **Sigma engine** | Industry-standard YAML rules: field mapping, modifier expansion (`contains`, `startswith`, `re`, `all`, `base64`, `cidr`…), compiled into executable rules. A rule with an unsupported feature is **excluded and reported**, never half-executed (`GET /api/v1/ingest/detection-coverage`); 14 bundled community-style rules |
+| **Correlation** | Threshold (`N events in T`: brute-force, port sweep, denied burst) and sequence (`A then B`: failed logins then success) over Redis-backed sliding windows; hits become normal alerts with MITRE mapping; windows and tracked entities are explicitly bounded |
+| **Event store & search** | Monthly-partitioned storage (retention = partition `DROP`, not mass `DELETE`); structured search on an **allowlist** of fields with escaped free text — no client-controlled SQL ever reaches the database |
+| **Source health** | `GET /api/v1/ingest/sources` exposes last event, unparsed count and last error per source — a silent source is visible, not invisible |
+
+### 🧪 Static Analysis — Aegis Total
+
+| Module | Description |
+|--------|-------------|
+| **Formats** | No extension is rejected: PE/.NET, ELF, Mach-O (incl. fat), Office OLE + OOXML (VBA macros, DDE, Excel 4.0, embedded MZ), PDF (JavaScript, OpenAction, Launch, XFA), ZIP/tar/gzip/bzip2/xz, APK/JAR/WASM, RTF, LNK, SQLite/pcap, plain scripts |
+| **Every upload analyzed** | Unknown binaries still get magic identification, entropy, strings, IOC/secret scanning — never a bare "binary, score 10" |
+| **YARA inside** | Uploaded samples are scanned with the active SOC signatures (yara-python); a match raises the score by fact — the report shows the matched rule and strings |
+| **Bounded by design** | Per-entry and total-uncompressed caps, nesting depth, member count, text-scan windows — an adversarial archive cannot stall the worker |
+| **Privacy** | Binaries are never stored: only sha256, findings and IOCs; reports are deletable (GDPR) |
+
+### 📁 File Integrity Monitoring
+
+| Module | Description |
+|--------|-------------|
+| **Watchlists** | Per-agent configuration from the dashboard: Run keys, Scheduled Tasks, services, hosts file, cron, systemd |
+| **Engine** | Guard uses `WatchService` + SHA-256 baselines; every change becomes an OCSF File Activity event with MITRE mapping (T1543/T1547) |
+| **Honest limits** | User-mode telemetry (not a minifilter driver); hashing capped at 8 MB/file; missing `yara64.exe` degrades with an explicit ack, never a silent "looks fine" |
+
+### 🌐 OSINT + AI Automation
+
+| Module | Description |
+|--------|-------------|
+| **Auto-enrichment** | IPs/domains in alert context are looked up via VirusTotal, Shodan, AbuseIPDB; results update the IP reputation database automatically |
+| **Keys from the dashboard** | Settings → Integrations: providers are discovered dynamically from the backend catalog, keys encrypted at rest (KEK), effective immediately. An env var **wins** over the DB so ops can pin a key per deployment. Fallback: env → DB → skipped with `api_key_not_configured` (never a hard failure) |
+| **AI providers** | `auto` \| `disabled` \| `ollama` \| `gemini` \| `openai` — chosen from the dashboard, no `.env` edit, no restart. `auto` uses what actually responds (Ollama probe → cloud keys → disabled); a dead endpoint never becomes an error stream |
+| **Data-exit control** | `AI_AUTOMATIC_ENRICH`, default **off**: with a cloud provider, alert context (anonymized: IPs/emails/tokens redacted) leaves the network only when you switch it on. Local Ollama is always on, because nothing leaves the machine |
+| **Deterministic core** | Detection does **not** depend on AI at any point: rules, Sigma, correlation, FIM and YARA are deterministic. AI only summarizes |
+
+### 🔔 Notifications
+
+| Channel | Description |
+|---------|-------------|
+| **Telegram** | HIGH/CRITICAL alerts pushed to a bot chat the moment they are created, plus a periodic "Aegis is alive" heartbeat — the dashboard does not need to be open. Outbound HTTPS only: a fully local stack needs no open ports, no port forwarding, no cloud host. Setup: `@BotFather` → token in **Settings → Integrations & API Keys** → chat id in **Settings → Telegram Notifications** → **Send test message** verifies for real. Delivery is best-effort and fail-soft: detection and storage never depend on it |
+| **Browser** | *Desktop Notifications* and *Audio Alarms* toggles are functional — native OS notifications (Notification API) and audio alerts (WebAudio), driven by the realtime stream |
+| **Realtime stream** | `/api/v1/ws/alerts` pushes every newly created alert to connected dashboards (HttpOnly-cookie auth, no tokens in URLs); alert lists and counters update instantly |
+
+### 🗺️ Discovery Center
+
+| Module | Description |
+|--------|-------------|
+| **Network scan** | ARP + ICMP sweep + TCP connect scan — finds ALL devices on the subnet, not just those with open ports |
+| **MAC vendor lookup** | OUI database identifies device manufacturers (Samsung, Apple, Cisco…) |
+| **Agent status per IP** | `guard_status` / `nodetrace_status` show which agents are deployed and active on each host |
+| **Signed one-line enrollment** | `POST /api/v1/deploy/token` issues a short-lived token for Guard, NodeTrace, or both; the installer downloads artifacts, registers Windows services / systemd units, enables restart recovery and consumes one slot per agent. Credential-based WinRM/SSH deployment was **removed** (HTTP 410), not disabled |
+
+### 🔐 VaultX (Encrypted Notes)
+
+| Module | Description |
+|--------|-------------|
+| **AES-256-GCM notes** | Decrypted only for authorized roles, every read audited. Generic secret storage for runbooks, tokens, recovery codes. Aegis never requests or stores remote-deploy credentials: deployment uses signed enrollment |
+
+### ⚙️ Platform
+
+| Module | Description |
+|--------|-------------|
+| **Realtime overview** | `/api/v1/ws/overview` pushes counters every 30s; agents push telemetry over HTTPS with an encrypted local spool and bounded retry |
+| **Audit log** | Every API action (login, resolve, rule change, deploy) recorded with user, IP and details; non-blocking by design; dashboard viewer |
+| **Bulk triage** | Resolve-all / delete-all with confirmation dialog, audit-logged |
+| **Rate limiting** | SlowAPI backed by Redis; client key from `X-Forwarded-For` only behind a trusted proxy — a spoofed header cannot reset the budget; per-account login throttle, per-user AI limits |
+| **Backups** | Compressed `pg_dump` every 6h via the `aegis-backup` profile service, 7-day retention |
+
+---
 
 ## Quick Start
 
-### From clone to a working platform (one command)
+### One command (recommended)
 
-Serve **Docker Desktop in esecuzione** e **Python 3.10+**. Nient'altro per
-partire: il `.env` (con segreti casuali), la build degli agenti se mancano,
-l'avvio dello stack, il bootstrap dell'admin e lo smoke di verifica sono
-guidati dallo stesso comando.
+Serve **Docker Desktop running** and **Python 3.10+**. Nothing else to start: the `.env` (random secrets), agent builds if missing, stack startup, admin bootstrap and smoke test are all guided by the same command.
 
-```cmd
-git clone <repo> && cd aegis-ecosystem
+```bash
+git clone https://github.com/Terminalkid09/aegis-ecosystem.git
+cd aegis-ecosystem
 python scripts/setup.py
 ```
 
-Al termine stampa credenziali admin, URL della dashboard e i passi per
-l'aggiornamento (`python scripts/setup.py update`, che **non tocca il
-database**).
+It prints the admin credentials, the dashboard URL and the update path. To update later (data preserved — the database volume is never touched):
 
-Honest notes on requirements:
+```bash
+python scripts/setup.py update          # rebuild + restart, DB preserved
+python scripts/setup.py update --rebuild-agents   # also recompile host agents
+```
 
-| Serve | Quando |
+**Requirements, honestly:**
+
+| Needed | When |
 |---|---|
-| Docker Desktop (avviato) + Python 3.10+ | sempre (preflight di `setup.py`: se manca, si ferma e lo dice) |
-| JDK 21+ e Maven, pip/PyInstaller | **solo** se gli artefatti agenti non esistono e vanno compilati (su Windows il setup invoca `build.bat` da sé) |
-| `nssm.exe` | **scaricato da `setup.py`** con SHA-256 pinnato: serve per installare gli agenti come servizi Windows |
-| `yara64.exe` | **scaricato da `setup.py`** con SHA-256 pinnato: serve per le scansioni YARA sull'endpoint |
+| Docker Desktop (running) + Python 3.10+ | always (`setup.py` preflight stops and says so if missing) |
+| JDK 21+ and Maven | only if agent artifacts don't exist and must be built (Windows: `build.bat` is invoked for you) |
+| `nssm.exe` | **downloaded by `setup.py`** with pinned SHA-256 — used to install agents as Windows services |
+| `yara64.exe` | **downloaded by `setup.py`** with pinned SHA-256 — used for on-endpoint YARA scans |
 
-I due binari non sono nel repo (`.exe` è in `.gitignore`): li prende il setup e ne verifica l'hash — prima dell'estrazione e sull'eseguibile. Se la rete manca (o l'hash non torna) l'installazione **prosegue** e dichiara cosa resta spento, con il comando per metterli a mano; `--skip-binaries` salta il download.
+Both binaries are not in the repo (`.exe` is gitignored): the setup downloads and hash-verifies them (on the archive and again on the extracted executable). Offline or on a hash mismatch the install **continues** and declares exactly what stays off, with the manual command. `--skip-binaries` skips the download.
 
-The `.bat` files are **not** a required step: `aegis.bat` is a convenience menu
-for start/stop/logs/build in development. Local AI does not start by default:
-`set AEGIS_WITH_AI=1` before `setup.py` to enable ollama.
+The `.bat` files are **not** a required step: `aegis.bat` is a convenience menu (start/stop/logs/build) for development. Local AI does not start by default: `set AEGIS_WITH_AI=1` before `setup.py` to enable Ollama.
 
-### Updating (data preserved)
+### Docker (manual)
 
-```cmd
-python scripts/setup.py update
-```
-
-Rebuilds the images and restarts the stack **without touching the database**
-(events, alerts, users and agents live in the DB volume; the schema is
-self-created at startup). Use `--rebuild-agents` to recompile the host agents
-too.
-
-### Alternatives, and optional extras
-
-- Manual path: `aegis.bat` (interactive menu: backend, agents, build, pilot)
-  and `docker exec aegis-brain python -m app.admin bootstrap <email> <password>`
-  for the first admin.
-- **Kernel telemetry (ETW)**, optional: install [MinGW-w64](https://winlibs.com/)
-  and the build compiles `aegis-etw.exe`; the launcher wires it to Guard by
-  itself. Without it everything still works — Guard declares the degradation
-  and falls back to user-mode polling.
-- **`nssm.exe`** (installing agents as Windows services) and **`yara64.exe`**
-  (on-agent YARA scans) are the only two binaries not shipped in the repo.
-  `setup.py` downloads both with a **pinned SHA-256** (checked on the archive
-  and again on the extracted executable) and installs them where the
-  installers expect them. Offline, or if the hash does not match, nothing is
-  installed and the installer tells you the exact manual step — the platform
-  still comes up, declaring the missing capability instead of faking it.
-
-### Manual installation (without the script)
-
-1. Copy the example environment file:
-
-```cmd
-copy .env.example .env
-```
-
-2. Change the security values in `.env` before using anything beyond local development:
-
-```env
-AEGIS_API_KEY=replace-with-a-long-random-value
-AGENT_ENROLL_KEY=replace-with-a-long-random-value
-JWT_SECRET=replace-with-at-least-32-random-characters
-MASTER_KEY_B64=base64-encoded-32-byte-key
-REDIS_PASSWORD=replace-with-a-long-random-value
-```
-
-Generate `MASTER_KEY_B64` with:
-
-```cmd
-openssl rand -base64 32
-```
-
-3. Start the platform:
-
-```cmd
+```bash
+git clone https://github.com/Terminalkid09/aegis-ecosystem.git
+cd aegis-ecosystem
+copy .env.example .env        # cp on Linux/macOS
+# edit .env: replace every placeholder secret
 docker compose up -d --build
 ```
 
-4. Open:
-
-- Dashboard: `http://localhost:3000`
-- Brain API: `http://localhost:8000`
-- Link health: `http://localhost:8080/actuator/health`
-
-Or use the all-in-one management script (Windows):
-
-```cmd
-aegis.bat
-```
-
-Menu: `[1]` Start Backend + Frontend, `[2]` Start Local Agents, `[3]` Stop, `[4]` Clean DB, `[5]` View Logs, `[6]` Exit, `[B]` Build.
+| Service | URL |
+|---------|-----|
+| **Dashboard** | `http://localhost:3000` |
+| **Brain API** | `http://localhost:8000` |
+| **Link health** | `http://localhost:8080/actuator/health` |
 
 ### Deployment profiles
 
 | Profile | Command | Notes |
 |---|---|---|
-| Lab (default) | `docker compose up -d --build` | Dev TLS internal, porte localhost |
-| Pilot | `docker compose -f docker-compose.yml -f docker-compose.prod.yml -f docker-compose.mtls.yml up -d --build` | mTLS :8443, richiede `.env` senza placeholder + `BACKUP_PASSPHRASE` |
-| Observability (lab) | `docker compose -f docker-compose.yml -f docker-compose.observability.yml --profile observability up -d --build` | Prometheus `localhost:9090` + Grafana `localhost:3001`, richiede `GRAFANA_ADMIN_PASSWORD` |
+| **Lab** (default) | `docker compose up -d --build` | internal TLS, localhost ports |
+| **Pilot** | `docker compose -f docker-compose.yml -f docker-compose.prod.yml -f docker-compose.mtls.yml up -d --build` | mTLS on :8443, requires real `.env` secrets + `BACKUP_PASSPHRASE` |
+| **Observability** | `docker compose -f docker-compose.yml -f docker-compose.observability.yml --profile observability up -d --build` | Prometheus `:9090` + Grafana `:3001`, requires `GRAFANA_ADMIN_PASSWORD` |
 
-Equivalent installer scripts: `./install.sh lab|pilot [--observability]` and `.\install.ps1 lab|pilot [-Observability]` (never combined with pilot).
+Equivalent installers: `./install.sh lab|pilot [--observability]` and `.\install.ps1 lab|pilot [-Observability]` (never combined with pilot).
 
-### Standalone Agent Builds
+### Quality gates
+
+```bash
+# Brain tests (740+ pytest, deterministic, DB-backed)
+python scripts/run_integration_tests.py --import-mode=importlib
+
+# Guard tests (134 JUnit)
+cd aegis-guard && mvn -B test
+
+# NodeTrace unit tests
+cd NodeTrace/agents/python && python -m unittest tests.test_ebpf tests.test_update tests.test_linux_probe
+
+# Frontend: typecheck, build, browser e2e
+cd frontend && npx tsc -b && npm run build && npm run e2e
+
+# Live batteries: enroll → benign → attacks → resolve, and a hard evasion battery
+python scripts/live_battery.py
+python scripts/hard_battery.py
+```
+
+Four independent verification layers: 740+ pytest, 134 JUnit, 11 Playwright e2e, 2 live detection batteries — all green in CI.
+
+---
+
+## Architecture
+
+Aegis is built as a set of small services that speak one event model.
+
+### High-Level Architecture
+
+```
+ Endpoints / Syslog sources
+   │                │
+   │ agents         │ raw logs (rsyslog, firewall, proxy…)
+   ▼                ▼
+┌──────────┐   ┌──────────┐
+│  Guard   │   │  NodeTrace│        ┌─────────────────────┐
+│  (Java)  │   │ (Python) │──────▶ │      Aegis-Link      │
+└────┬─────┘   └──────────┘        │   (Spring Boot)      │
+     │                             │ ingest gateway, mTLS │
+     │        enrollment, commands, PKI                 │
+     ▼                             └──────────┬──────────┘
+┌───────────────────────────────────┐           │
+│           Aegis-Brain (FastAPI)   │      Redis (queue/cache)
+│  telemetry → detection → alerts   │◀──────────┘
+│  Sigma · correlation · SOAR · FIM │           │
+│  YARA · Total · OSINT · AI        │           ▼
+│  search · OCSF export · audit     │      PostgreSQL
+└───────────────┬───────────────────┘   (partitioned event store)
+                │
+                ▼
+        ┌──────────────┐        ┌──────────────────────────┐
+        │   Dashboard   │        │ Optional: Prometheus +   │
+        │  (React 19)   │        │ Grafana · Ollama (AI) ·  │
+        │  ws realtime  │        │ Caddy (TLS, mTLS)        │
+        └──────────────┘        └──────────────────────────┘
+```
+
+**Topology.** Each agent knows a single endpoint (`AEGIS_BRAIN_URL` for enrollment, commands and PKI; `AEGIS_GATEWAY_URL` for high-rate telemetry via `aegis-link`, which queues into Redis for the brain to consume). Dashboards are just browsers reading the brain: adding an operator is a registration, adding a host is an enrollment — agents never need to know about dashboards, and dashboards never talk to agents.
+
+### Components
+
+| Component | Stack | Role |
+| --- | --- | --- |
+| `aegis-brain` | FastAPI, SQLAlchemy, PostgreSQL, Redis | API, auth, telemetry processing, rules, alerts, VaultX, AI/OSINT, SOAR playbooks, syslog ingestion, audit logging |
+| `aegis-link` | Spring Boot | Agent/syslog ingestion gateway; pushes events to Redis |
+| `aegis-guard` | Java 21 | Endpoint security agent and mitigation command consumer |
+| `NodeTrace` | Python | Host telemetry agent for CPU/RAM/process/users/network flows |
+| `frontend` | React 19, TypeScript, Vite | Dashboard for alerts, agents, rules, VaultX, OSINT, AI, playbooks, syslog viewer, audit log |
+
+---
+
+## Agents & Telemetry
+
+Every source enters the **same** event model and the **same** detection engine. Two roads converge, and the first requires no resident agent on the observed system.
+
+| Layer | Where it runs | What it brings | Signing required |
+|---|---|---|---|
+| **eBPF** (`aegis-ebpf/`) | Linux, kernel | `sched_process_exec`, `do_exit`, TCP ESTABLISHED via ringbuf | no (kernel verifier) |
+| **ETW kernel providers** (`aegis_etw.c`) | Windows, user-mode consumer | `Kernel-Process` 1/2, `Kernel-Network` TcpIp | no (system providers) |
+| **Endpoint agents** | host | Guard (processes, persistence, services), NodeTrace (CPU/RAM/disk/network/users) | signed enrollment + mTLS |
+| **Log sources** | appliance, server | syslog RFC5424/3164, Windows Event, Zeek, Suricata, nginx/Squid, firewall | none: one config line toward the endpoint |
+
+On Linux, kernel telemetry is native (eBPF — 300/300 events verified without loss on kernel 6.6 with BTF). On Windows it runs through ETW: `aegis_etw.c` is a **user-mode** consumer of system providers (no driver, no signing), spawned by Guard itself when `AEGIS_ETW_ENABLED=true` and read from its stdout. The service runs as LocalSystem, so the collector inherits elevation: zero UAC prompts, zero manual steps. A proprietary kernel-mode driver is only needed for **inline prevention** — that requires EV signing and Microsoft attestation, and is out of scope together with ETW-TI.
+
+### Agents survive reboot
+
+Docker containers come back on their own (`restart: unless-stopped`), but host agents started by hand die with the session. Autostart is a property of the **installation**, not a manual step:
+
+- **Both agents are Windows services (NSSM)** — `AegisGuard` and `AegisNodeTrace` — installed by their installers (`aegis-guard\install\windows\install.ps1`, `NodeTrace\install\windows\install.ps1`; elevated shell, auto-start, restart-on-crash, log file). Uninstall with the matching `uninstall.ps1`.
+- **`python scripts/setup.py` registers them for you** when it runs elevated; if it is not elevated, it prints the exact commands instead of leaving a silent gap. Use `--no-autostart` to force dev-mode agents only (never two instances per endpoint: either services **or** dev processes).
+- **No-admin fallback**: `powershell -ExecutionPolicy Bypass -File scripts/install-agents-autostart.ps1` registers Scheduled Tasks "at log on" (user context; elevated Guard actions unavailable). Remove with `-Remove`.
+- **Token installer**: when remote dashboard connectivity is selected, the installer performs the service registration itself and verifies the service is running before returning success.
+
+### Development mode (agents)
+
+```bash
+# NodeTrace
+cd NodeTrace\agents\python
+set AEGIS_ENROLL_KEY=<key>
+set NODETRACE_REGISTER_URL=http://localhost:8000/api/v1/register
+python agent.py
+```
+
+```bash
+# Guard
+cd aegis-guard
+set AEGIS_BRAIN_URL=http://localhost:8000/api/v1
+set AEGIS_GATEWAY_URL=http://localhost:8000/api/v1/telemetry/report
+set AEGIS_ENROLL_KEY=<key>
+jre-new\bin\java.exe -jar target\aegis-guard.jar
+```
+
+Two details that fail with unreadable errors:
+
+- **A JVM 21+ is required**, and the `java` on the `PATH` is not automatically suitable: if it is an 8, the service installs, starts and dies with `UnsupportedClassVersionError`. The installer verifies the **version** and uses the resolved path, not the `java` string.
+- **`AEGIS_ENROLL_KEY` is mandatory** even when `secret.json` already exists: `Config.ENROLL_KEY` is read at startup with `getEnvOrThrow`, so without it the process exits immediately.
+
+### Standalone agent builds
 
 Pre-compiled agents ship without Python/JDK runtime dependencies:
 
@@ -168,418 +321,160 @@ Pre-compiled agents ship without Python/JDK runtime dependencies:
 | NodeTrace | PyInstaller | `NodeTrace/agents/python/dist/nodetrace-agent/nodetrace-agent.exe` | 15 MB (bundled) |
 | Aegis-Guard | Maven + jlink | `aegis-guard/target/aegis-guard.jar` + `jre-new/` | 47 MB (minimal JRE) |
 
-Build all agents with a single command:
+Build all agents with a single command: `build.bat`. If `JAVA_HOME` still points at a JRE 8, `mvn test` fails with a confusing `class file version 65.0 ... only recognizes up to 52.0` (stale classes) even though compile reports success — point it at a JDK 21+ first.
 
-```cmd
-build.bat
-```
-
-Maven takes the JDK from `JAVA_HOME`, and the guard is compiled for **Java 21** while the agent itself runs on a newer JDK. If `JAVA_HOME` still points at a JRE 8, `mvn test` fails with a confusing `class file version 65.0 ... only recognizes up to 52.0` error even though the compile step reports success (stale classes). Point it at a JDK 21+ before building:
-
-```cmd
-set JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-25.0.2.10-hotspot
-cd aegis-guard && mvn test
-```
+---
 
 ## Authentication Model
 
 - **Dashboard**: Bearer JWT after `POST /api/v1/auth/login` (self-service register is disabled by default: with `ALLOW_OPEN_REGISTRATION=false` only an admin can create accounts). Telemetry, rules, VaultX, OSINT, AI, OCSF export and Aegis Total all require JWT.
 - **Roles**: `ROLE_PERMISSIONS` in `app/core/deps.py` maps `viewer`/`user`/`auditor`/`responder`/`analyst`/`admin` to permissions. The role is read from the database on **every** request, so a change applies without re-login. Registration always creates a `user`: privilege is granted from a shell, never from an exposed API.
 
-  ```cmd
+  ```bash
   docker exec aegis-brain python -m app.admin list
   docker exec aegis-brain python -m app.admin set-role <email> admin
   ```
 
   Without at least one `admin`, host isolation, deploy approval, rule and alert deletion and site assignment all return 403 by design. `set-role` refuses to demote the last remaining admin unless `--force` is given.
 - **Agents**: enrollment key at registration, then per-agent Bearer token (NodeTrace) or gateway API key (Aegis-Link).
-- **Aegis-Link**: `X-Api-Key` for event ingestion — server-side only, not exposed to the React app.
+- **Aegis-Link**: `X-Api-Key` for event ingestion — server-side only, never exposed to the React app.
 
 The global `AEGIS_API_KEY` is for Aegis-Link and automation scripts. It does **not** grant dashboard access.
 
-## Database
+### Session & device trust
 
-`aegis-brain` runs `alembic upgrade head` on startup. The repository includes an initial Alembic revision under `aegis-brain/alembic/versions`.
+| Capability | How it works |
+|---|---|
+| **Silent renewal** | `POST /api/v1/auth/refresh` renews the session cookie; the dashboard renews every 25 min and on window focus — an active user never sees the login page again |
+| **Stay signed in** | Opt-in 30-day device trust: the `aegis_remember` cookie carries only an opaque token (the server keeps the SHA-256), **rotated on every use** — a stolen cookie replays exactly once. Silent re-login via `POST /api/v1/auth/remember` |
+| **Trusted devices** | Settings → Trusted Devices lists every device with last-used and expiry; revoke individually. Logging out ends the trust — the model is GitHub's, not "forever sessions" |
 
-There is still an optional development fallback, `DB_BOOTSTRAP_CREATE_ALL=true`, that creates missing tables from SQLAlchemy metadata. Leave it disabled in production and use Alembic revisions for schema changes.
+---
 
-## Redis
+## Database & Redis
 
-Redis is password-protected in Docker Compose and all services are configured to use the same `REDIS_PASSWORD`.
+`aegis-brain` runs `alembic upgrade head` on startup; revisions live under `aegis-brain/alembic/versions`. An optional development fallback, `DB_BOOTSTRAP_CREATE_ALL=true`, creates missing tables from SQLAlchemy metadata — leave it disabled in production and use Alembic revisions for schema changes.
 
-If you run Redis outside Compose, make sure `REDIS_URL`, `REDIS_PASSWORD`, and `SPRING_DATA_REDIS_PASSWORD` all point to the same authentication setup.
+Redis is password-protected in Docker Compose and all services use the same `REDIS_PASSWORD`. If you run Redis outside Compose, make sure `REDIS_URL`, `REDIS_PASSWORD` and `SPRING_DATA_REDIS_PASSWORD` all point to the same authentication setup.
 
-## Agents
-
-Containerized `aegis-guard` is behind the optional Compose profile:
-
-```cmd
-docker compose --profile container-agents up -d --build
-```
-
-For real endpoint telemetry, run standalone agents on the host:
-
-```cmd
-aegis.bat
-:: Option [2] — Start Local Agents
-```
-
-Or run with `aegis.bat start agents` in batch mode.
-
-### Development Mode (requires Python/Java)
-
-```cmd
-cd NodeTrace\agents\python
-set AEGIS_ENROLL_KEY=<key>
-set NODETRACE_REGISTER_URL=http://localhost:8000/api/v1/register
-python agent.py
-```
-
-```cmd
-cd aegis-guard
-set AEGIS_BRAIN_URL=http://localhost:8000/api/v1
-set AEGIS_GATEWAY_URL=http://localhost:8000/api/v1/telemetry/report
-set AEGIS_ENROLL_KEY=<key>
-jre-new\bin\java.exe -jar target\aegis-guard.jar
-```
-
-Due dettagli che fanno fallire l'avvio in modo poco leggibile:
-
-- **Serve una JVM 21+**, e la `java` del `PATH` non è automaticamente adatta: se
-  è una 8, il servizio si installa, parte e muore con
-  `UnsupportedClassVersionError`. L'installer (`install.ps1`) verifica la
-  **versione** e usa il percorso risolto, non la stringa `java`.
-- **`AEGIS_ENROLL_KEY` è obbligatoria** anche quando `secret.json` esiste già:
-  `Config.ENROLL_KEY` viene letta all'avvio con `getEnvOrThrow`, quindi senza di
-  essa il processo termina subito.
-
-Se usi il runtime minimo creato da `build.bat`, deve contenere il modulo
-`jdk.net`: Apache HttpClient 5 usa `jdk.net.Sockets` e `jlink` non deduce le
- dipendenze del codice sul classpath. Il modulo è già nell'elenco
-`--add-modules` di `build.bat`.
-
-## Telemetry Collection Layers
-
-Ogni sorgente entra nello **stesso** modello evento e nello **stesso** motore di
-rilevazione. Due strade convergono, e la prima non richiede alcun agente
-residente sul sistema osservato.
-
-| Livello | Dove gira | Cosa porta | Firma richiesta |
-|---|---|---|---|
-| **eBPF** (`aegis-ebpf/`) | Linux, kernel | `sched_process_exec`, `do_exit`, TCP ESTABLISHED via ringbuf | no (verifier del kernel) |
-| **ETW Kernel providers** (`aegis-ebpf/aegis_etw.c`) | Windows, consumer user-mode | `Kernel-Process` 1/2, `Kernel-Network` TcpIp | no (provider di sistema) |
-| **Agenti endpoint** | host | Guard (processi, persistenze, servizi), NodeTrace (CPU/RAM/disco/rete/utenti) | enrollment firmato + mTLS |
-| **Sorgenti di log** | appliance, server | syslog RFC5424/3164, Windows Event, Zeek, Suricata, nginx/Squid, firewall | nessuna installazione: solo una riga verso l'endpoint |
-
-Su Linux la telemetria kernel è nativa (eBPF, validata 300/300 eventi senza
-perdite su kernel 6.6 con BTF). Su Windows lo è tramite ETW: `aegis_etw.c` è un
-consumer **user-mode** dei provider di sistema (nessun driver, nessuna firma),
-che Guard stesso spawna quando `AEGIS_ETW_ENABLED=true` e legge dal suo stdout
-(`EtwPipeSource`). Il servizio gira come LocalSystem, quindi il collector
-eredita l'elevazione: zero UAC, zero passaggi manuali. Il build lo compila
-automaticamente quando MinGW-w64 è presente, e l'installer/l'avvio lo
-deployano e abilitano da soli. Un driver kernel-mode proprietario serve solo
-per la **prevenzione inline**: quella richiede firma EV e attestazione
-Microsoft, ed è fuori scope insieme a ETW-TI.
-
-**Honest scope.** Windows Event Log, Windows Firewall log e telemetria degli
-agenti sono **reali** sull'host di lab. Zeek, Suricata, Squid/nginx e pfSense
-sono dimostrati con **sample sintetici in formato reale** (`scripts/siem_demo.py`),
-non con traffico di produzione: servono a provare i parser e la pipeline, non a
-produrre metriche di detection su traffico reale.
-
-## Features
-
-### Discovery Center
-- **Network scan**: ARP + ICMP sweep + TCP connect scan — finds ALL devices on subnet, not just those with open ports
-- **MAC vendor lookup**: OUI database identifies device manufacturers (Samsung, Apple, Cisco, etc.)
-- **Agent status per IP**: `guard_status` and `nodetrace_status` columns show which agents are deployed/active on each host
-- **Signed one-line enrollment**: `POST /api/v1/deploy/token` issues a short-lived token for Guard, NodeTrace, or both. The generated installer downloads the selected artifacts, registers Windows services or Linux systemd units, enables restart recovery, and consumes one enrollment slot per agent. Credential-based WinRM/SSH deployment was **removed**, not disabled (see `docs/OPERATIONS.md`).
-- **Synchronize agent status**: Button to sync DiscoveredHost agent states with live Agent table
-
-### Detection Rules Engine
-- **21 static rules**, deterministic and inspectable: process lineage and masquerading, execution from suspicious paths, persistence (autorun registry keys, scheduled tasks), security-control tampering (AV service stopped or killed, Defender exclusions, firewall off, audit policy cleared), event-log clearing, recovery destruction (backup catalog, shadow copies, recovery), local discovery. `GET /api/v1/rules/static` returns the live list and it is the single source of truth for the count.
-- **MITRE ATT&CK metadata**: Each static rule carries tactic, technique, and technique ID (T1059, T1134, T1036, T1562, T1070.001, T1490, etc.)
-- **Custom rules**: AND/OR multi-condition rules, whitelist (hostname/IP exclusions), auto-remediation actions
-- **Rule testing**: `POST /api/v1/rules/test` to test rules against sample event data
-
-### YARA & FIM (Static Sandboxing + File Integrity Monitoring)
-- **YARA rules managed from the dashboard**: create/enable/disable SOC signatures (admin/analyst); scans run on-demand on any endpoint via the official `yara64.exe` (deployed by the installer into `bin/`), every match becomes a HIGH alert and a searchable event
-- **YARA in Aegis Total**: uploaded samples are scanned with the active SOC signatures (yara-python); a match raises the score by fact, not heuristics — the report shows the matched rule and strings
-- **File Integrity Monitoring in-process**: configure a per-agent watchlist (Run keys, Tasks, services, hosts, cron, systemd...) from the dashboard; Guard (WatchService + SHA256 baseline) reports every change as an OCSF File Activity event with MITRE mapping (T1543/T1547 for persistence paths)
-- **Honest limits, declared**: FIM is user-mode telemetry (not a minifilter driver); hashing is capped at 8 MB per file; missing `yara64.exe` degrades scans with an explicit ack, never a silent "looks fine"
-
-### OSINT + AI Automation
-- **Auto-enrichment**: When an alert fires, IPs/domains in the alert context are automatically looked up via VirusTotal, Shodan, AbuseIPDB
-- **Pluggable AI provider** — chosen **from the dashboard** (Settings → AI Provider), no `.env` edit and no restart: `auto` (default) | `disabled` | `ollama` | `gemini` | `openai`, plus the model per provider (`GET`/`PUT /api/v1/ai/settings`). A value set explicitly in `.env` wins over the dashboard, and the UI labels each field with where its value comes from (`da .env` / `da dashboard` / `default`) so a field that has no effect never looks like it should.
-  - `auto` uses **what actually works**: a local Ollama **only if it responds** (short reachability probe), otherwise Gemini/OpenAI if a key exists, otherwise `disabled`. A configured-but-dead endpoint never turns into a stream of connection errors.
-  - `disabled` is a first-class state, not a failure: `GET /api/v1/ai/status` returns provider/model/`local`/reason and the dashboard shows it — no fake AI text.
-  - **Cloud keys from the dashboard** (Settings → Integrations): `Gemini` and `OpenAI / OpenAI-compatible` appear in the catalog like the OSINT providers, encrypted at rest (KEK), env wins over DB.
-  - **Data-exit control** (`AI_AUTOMATIC_ENRICH`, default **off**): with a **cloud** provider, automatic alert enrichment happens only if you switch it on (Settings → AI Provider) — alert context (already anonymized: IPs/emails/tokens redacted) leaves the network only when you ask. With a **local** provider enrichment is always on, because nothing leaves the machine. The flag is in the dashboard and in the `.env`, and the effective value is whatever the resolution returns.
-  - **Ollama is optional and not started by default**: the stack runs light (`aegis.bat start`). Enable local AI with `set AEGIS_WITH_AI=1` and pick the model your hardware can run (`set AEGIS_MODEL=qwen2.5:14b`). Point `OLLAMA_URL` at a **powerful machine on your network** to keep AI local while running big models.
-  - Detection does **not** depend on AI at any point: rules, Sigma, behavioral tags, correlation, FIM and YARA are deterministic. AI only summarizes.
-
-### Host agents survive reboot
-Docker containers come back on their own (`restart: unless-stopped`), but host agents started by hand die with the session. Autostart is a property of the **installation**, not a manual step:
-- **Both agents are Windows services (NSSM)** — `AegisGuard` and `AegisNodeTrace` — installed by their installers:
-  `aegis-guard\install\windows\install.ps1` and `NodeTrace\install\windows\install.ps1` (elevated shell; auto-start, restart-on-crash, log file). Uninstall with the matching `uninstall.ps1`.
-- **`python scripts/setup.py` registers them for you** when it runs elevated; if it is not, it prints the exact commands instead of leaving a silent gap. Use `--no-autostart` to force dev-mode agents only (two instances per endpoint are never started: either services **or** dev processes).
-- **No-admin fallback**: `powershell -ExecutionPolicy Bypass -File scripts/install-agents-autostart.ps1` registers Scheduled Tasks “at log on” (user context; elevated Guard actions unavailable). Remove with `-Remove`.
-- Logs: `logs\` — `nodetrace.txt`, `guard.txt`, `nodetrace-service.log`.
-- **Token installer**: when remote dashboard connectivity is selected, the installer performs the service registration itself and verifies the service is running before returning success. When it is disabled, artifacts are installed but services are not started because no enrollment target was selected.
-- **Local dashboard**: not currently shipped as an endpoint artifact. The dashboard remains a central web application; the deployment UI rejects the local-dashboard option instead of installing an incomplete or unauthenticated copy.
-- **Auto IP reputation**: OSINT results update the IP reputation database automatically
-- **Keys from the dashboard (Settings → Integrations)**: providers are discovered dynamically from the backend catalog, keys are stored encrypted at rest and take effect immediately — no restart. An env var set in `.env` **wins** over the DB value, so ops can still pin a key per deployment.
-- **Fallback order**: env var → DB (dashboard) → provider skipped with `api_key_not_configured` (never a hard failure)
-
-### Real-time Updates
-- **WebSocket overview**: `/api/v1/ws/overview` pushes a counters snapshot every **30s**. It authenticates with the `aegis_token` HttpOnly cookie — bearer tokens are never placed in the URL, since proxies log URLs.
-- **Telemetry transport**: agents push events over **HTTPS** (`POST /api/v1/telemetry/report` and `/report/batch`) with an encrypted local spool and bounded retry — **not** over a persistent WebSocket.
-- **Smooth charts**: Recharts AreaChart with Brush zoom, disabled animations for real-time data
-
-### Notifications (works fully local — no cloud deployment needed)
-- **Telegram channel**: HIGH/CRITICAL alerts are pushed to a Telegram bot chat the moment they are created, plus a periodic "Aegis is alive" heartbeat — the dashboard does not need to be open. The notifier makes **outbound HTTPS** calls to `api.telegram.org`, so a fully local stack needs no open ports, no port forwarding, no cloud host.
-  - Setup: create a bot with `@BotFather`, paste the token in **Settings → Integrations & API Keys** (`telegram_bot_token`, encrypted at rest), then the chat id in **Settings → Telegram Notifications** (min severity: HIGH or CRITICAL-only; heartbeat interval configurable). **Send test message** verifies token + chat for real before the first alert.
-  - Delivery is best-effort and fail-soft: Telegram errors are logged and deduplicated, detection and storage never depend on it. With a **cloud provider** nothing changes; with the stack local, notifications keep working as long as the machine has internet access.
-- **Browser notifications (dashboard open)**: the *Desktop Notifications* and *Audio Alarms* toggles in Settings → Alerts & Notifications are functional — native OS notifications via the Notification API and an audio beep via WebAudio, driven by the realtime alert stream.
-- **Realtime alert stream**: `/api/v1/ws/alerts` pushes every newly created alert to connected dashboards (same HttpOnly-cookie authentication as `/ws/overview`, no tokens in URLs); alert lists and counters update instantly instead of waiting for the next poll.
-
-### Demo Agent Tag
-- Demo agents are tagged `is_demo: true`, excluded from main stats by default
-- Yellow "DEMO" badge in Endpoints list
-- Toggle to show/hide demo agents
-- `?include_demo=true` query parameter to include them in API responses
-
-### VaultX (Encrypted Notes)
-- AES-256-GCM encrypted notes, decrypted only for authorized roles and audited
-- Generic secret storage (runbooks, tokens, recovery codes). Aegis never requests or stores remote-deploy credentials: deployment uses signed one-line enrollment.
-
-### Agent Architecture
-- **NodeTrace (Python)**: Telemetry sensor — collects CPU/RAM/disk/network/processes/users/flows and reports to Aegis-Brain. Does NOT perform remediation. Polls commands for `GET_TELEMETRY` and `NETWORK_SCAN` only.
-- **Aegis-Guard (Java)**: Endpoint security agent — monitors running processes, detects suspicious activity via process monitoring hooks (ProcessMonitor), applies detection rules with MITRE ATT&CK metadata, and executes remediation commands. Polls commands for all 9 remediation actions.
-- **Available remediation commands**:
-  | Command | Description | Windows | Linux |
-  |---|---|---|---|
-  | `KILL_PROCESS` | Terminate single process | `taskkill /F /PID` | `ProcessHandle.destroyForcibly()` |
-  | `KILL_PROCESS_TREE` | Kill process + children | `taskkill /F /T /PID` | `children().forEach(destroyForcibly)` |
-  | `BLOCK_IP` | Permanent firewall block | `netsh advfirewall` rule | `iptables -A INPUT -s IP -j DROP` |
-  | `BLOCK_IP_TEMPORAL` | Time-limited block (auto-expire via `ScheduledExecutorService`) | same + scheduled unblock | same + scheduled unblock |
-  | `QUARANTINE_BINARY` | Copy binary to `quarantine/` dir, SHA256 hash, ACL-restrict | `icacls /deny Everyone` | `setReadable/Executable(false)` |
-  | `REMOVE_PERSISTENCE` | Scan & remove Registry Run keys, Scheduled Tasks, Services, Startup folder, cron, systemd, shell init | `reg delete`, `schtasks /delete`, `sc stop/delete` | crontab scan, systemd scan |
-  | `DNS_SINKHOLE` | Redirect domain to `0.0.0.0` via hosts file | `%SystemRoot%\drivers\etc\hosts` | `/etc/hosts` |
-  | `COLLECT_IOC` | Forensics: path, SHA256, netstat conns, command line | `wmic`, `netstat -ano` | `/proc/pid/*`, `ss -tupn` |
-  | `VERIFY` | Check if PID is alive | `ProcessHandle.of(pid).isPresent()` | same |
-  | `ISOLATE_HOST` | Isolate endpoint from network | (platform-specific) | (platform-specific) |
-
-### SOAR Playbook Engine
-- **Trigger conditions**: Evaluate alert severity, event type, and process name before executing actions
-- **Action types**:
-  | Action Type | Target | Description |
-  |---|---|--|
-  | `webhook` | URL | HTTPS POST with alert payload |
-  | `block_ip` | IP address | Permanent firewall block via agent |
-  | `block_ip_temporal` | IP address | Time-limited firewall block (default 3600s, configurable via `duration_seconds` param) |
-  | `kill_process` | — | Terminate single process by PID |
-  | `kill_process_tree` | — | Terminate process + all child processes |
-  | `quarantine_binary` | — | Copy executable to `quarantine/` dir + ACL-restrict permissions |
-  | `remove_persistence` | — | Scan & remove Registry Run keys, scheduled tasks, services, cron, systemd units |
-  | `dns_sinkhole` | Domain | Add domain to hosts file (`0.0.0.0`) |
-  | `collect_ioc` | — | Gather executable path, SHA256, netstat connections, command line |
-  | `isolate_host` | — | Isolate endpoint from network |
-  | `script` | Command line | Local shell command execution |
-  | `eradicate` | — | Composite chain: COLLECT_IOC → QUARANTINE → KILL_PROCESS_TREE → REMOVE_PERSISTENCE → VERIFY |
-- **Automatic execution**: Playbooks matching alert conditions run automatically after alert creation
-- **Playbook CRUD**: Create, edit, activate/deactivate playbooks via dashboard or API
-- **Execution history**: Track each playbook run with timestamps, status, and results
-
-### MITRE ATT&CK Alert Mapping
-- **Alert enrichment**: Every alert carries `mitre_tactic_id`, `mitre_technique_id`, `mitre_tactic_name`, `mitre_technique_name`
-- **Rule propagation**: MITRE fields from matched `CustomRule` are propagated to the resulting alert
-- **Dashboard badges**: Alerts display clickable technique IDs linking to MITRE ATT&CK reference pages
-
-### Aegis Total (Static Analyzer)
-- **No extension is rejected**: PE/.NET, ELF, Mach-O (incl. fat), Office OLE + OOXML (macro VBA, DDE, Excel 4.0, embedded MZ), PDF (/JavaScript, /OpenAction, /Launch, XFA, data after `%%EOF`), ZIP/tar/gzip/bzip2/xz (bounded recursion, zip-bomb caps), APK/JAR/Java class/WASM, RTF, LNK, SQLite/pcap and plain scripts.
-- **Every upload gets a real analysis**: files without a dedicated parser still get magic identification, entropy, string extraction and IOC/secret scanning — never a bare “binary, score 10”.
-- **Bounded by design**: per-entry size cap, total-uncompressed cap, nesting depth, member count and text-scan windows, so an adversarial archive cannot stall the worker.
-- **Retention**: binaries are never stored — only the sha256, findings and IOCs; reports are deletable (GDPR).
-- **Discovery**: `GET /api/v1/total/formats` returns the accepted-format catalog used by the UI.
-
-### OCSF Export (SIEM Interoperability)
-- **Standard schema**: alerts are exported as OCSF 1.4.0 **Detection Finding** (class 2004) and process telemetry as **Process Activity** (class 1007), with severity, MITRE ATT&CK `attacks[]`, device/process objects and `unmapped.aegis` for Aegis-specific fields.
-- **Ingestion-ready**: `GET /api/v1/ocsf/alerts` returns JSON or **NDJSON** (`?download=true`) for batch pipelines (Splunk, Elastic, Sentinel, AWS Security Lake).
-- **No custom parser needed**: `POST /api/v1/ocsf/convert` lets an external producer convert an Aegis event to OCSF without database access.
-
-### SIEM — Multi-source Log Ingestion
-- **One pipeline for every source**: pushes land on `POST /api/v1/ingest/{source}` and are parsed, normalized and pushed through the *same* detection → alert → SOAR chain used by agents. An alert raised by a log source can trigger a playbook — it is one product, not two.
-- **Parser registry with auto-detection**: `syslog` (RFC 3164 + RFC 5424), generic JSON/NDJSON, **Windows Event Log** (`4624/4625/4688/4697/4720/7045/1102`…), **Zeek** (`conn/dns/http/ssl`), **Suricata** `eve.json`, web proxy (nginx/Squid/Apache), firewall (Windows Firewall, pfSense `filterlog`, iptables). `parser: auto` picks one from the payload shape; `GET /api/v1/ingest/catalog` is the single source of truth for the UI.
-- **Unified event model**: every source maps to one OCSF-aligned schema (time, severity, host/user, network 5-tuple, process, file, DNS/HTTP) — no per-source consumer.
-- **Real syslog listener**: optional UDP **and** TCP listener (`SYSLOG_ENABLED`, default off, bound to `127.0.0.1` unless `SYSLOG_BIND` is explicitly widened) so an rsyslog/firewall can point straight at the brain. Verified end-to-end on real datagrams, with a bounded queue so a syslog storm is counted and dropped rather than accumulated.
-- **Sub-second visibility**: `GET /api/v1/ingest/sources` exposes each source's health (last event, unparsed count, last error) — a silent source is visible, not invisible.
-
-### SIEM — Sigma Rule Engine
-- **Industry-standard rules**: Sigma YAML is loaded, field-mapped, modifier-expanded (`contains`, `startswith`, `endswith`, `re`, `all`, `base64`, `cidr`…) and compiled into executable internal rules — mapping custom rules to the format the whole industry writes.
-- **Fails loud, never half-way**: a rule using an unsupported modifier/feature is **excluded and reported**, not silently executed on a subset of its logic (`GET /api/v1/ingest/detection-coverage` lists every excluded rule and why).
-- **Bundled rules**: 14 real detection rules across Windows Event, Linux auth, Zeek DNS, Suricata and proxy/firewall log sources, each mapped to MITRE ATT&CK.
-
-### SIEM — Multi-event Correlation
-- **Threshold and sequence** over Redis-backed sliding windows: `N events in T` (brute-force, port sweep, denied burst) and `A then B` (failed logins **then** a success).
-- **Same alert path**: a correlation hit produces a normal alert with MITRE mapping, so triage, incidents and SOAR playbooks work unchanged.
-- **Explicitly bounded**: each rule caps its window, bucket size and max tracked entities, so correlation cannot be used as a memory amplifier.
-
-### SIEM — Event Store & Search
-- **Time-partitioned storage**: normalized events live in a monthly-partitioned table, so retention is a partition `DROP` instead of a mass `DELETE`.
-- **Structured search**: `POST /api/v1/search/events` filters on an **allowlist** of fields with `LIKE`-escaped free text — no column name, operator or `ORDER BY` ever reaches the database from the client; `GET /api/v1/search/events` is the shareable-link variant.
-- **Dedup + retention**: repeated relays collapse via `event_id` dedup in Redis; expired partitions are purged on the configured schedule.
-
-### Syslog Event Viewer
-- **Centralized storage**: Syslog events from Aegis-Link or external parsers stored in `SyslogEvent` table
-- **Rich query API**: Filter by severity, facility, hostname, app name with pagination
-- **Dashboard viewer**: Real-time syslog table with severity badges, hostname, and app-name columns
-
-### Audit Log
-- **Action tracking**: Every API action (login, alert resolve, rule change, deploy) is logged with user, IP, and details
-- **Non-blocking**: `log_audit()` utility runs after the main commit — failures don't impact operations
-- **Dashboard viewer**: Chronological audit log table with JSON detail expansion
-
-### Resolve All / Delete All
-- **Bulk alert management**: Resolve all unresolved alerts or delete all alerts with a single button
-- **Confirmation dialog**: Prevents accidental mass operations
-- **Audit logging**: Bulk operations are recorded in the audit log
-
-### Rate Limiting
-- **Global limiter**: SlowAPI limiter backed by Redis (`RATE_LIMIT_STORAGE_URI`). The client key is derived from `X-Forwarded-For` only when the request comes from a trusted proxy, otherwise it falls back to the socket peer address — a spoofed header cannot reset the budget.
-- **Per-endpoint limits**: `/auth/me` at 30 requests/minute; `/auth/login` and `/auth/register` are additionally throttled per account.
-- **AI chat**: Per-user rate limit (configurable via `AI_RATE_LIMIT_PER_MIN`).
-
-### CI/CD Pipeline
-- **GitHub Actions**: lint (flake8 + ESLint), security audit (bandit + pip-audit), dependency/image scanning (Trivy), SBOM generation, secret scanning, and test stages.
-- **Test isolation**: Dedicated `aegis_test` PostgreSQL database for test runs — never touches production data
-
-### Database Backup
-- **Automatic dumps**: `pg_dump` compressed backup every 6 hours via cron
-- **Retention**: 7-day backup retention with daily rotation
-- **Isolated service**: Docker Compose backup service (`aegis-backup`) on `backup` profile with dedicated volume
+---
 
 ## API Endpoints
 
+Full reference — all endpoints are under `/api/v1` unless noted.
+
 | Endpoint | Auth | Purpose |
 | --- | --- | --- |
-| `POST /api/v1/auth/register` | none (or admin if `ALLOW_OPEN_REGISTRATION=false`) | Create dashboard user (validated, rate-limited) |
-| `POST /api/v1/auth/login` | none | Get JWT (rate-limited + per-account throttle); `remember: true` issues a 30-day device-trust cookie |
-| `POST /api/v1/auth/refresh` | session cookie | Silent session renewal (new JWT + cookie, same user) |
-| `POST /api/v1/auth/remember` | `aegis_remember` HttpOnly cookie | Silent re-login from a trusted device; rotates the device token on every use |
-| `GET /api/v1/auth/devices` | Bearer JWT | List trusted devices ("Stay signed in") with last-used timestamps |
-| `DELETE /api/v1/auth/devices/{id}` | Bearer JWT | Revoke a trusted device; its cookie dies at next use |
-| `POST /api/v1/auth/logout` | Bearer JWT | Blacklist token, clear cookie, end device trust |
-| `GET /api/v1/auth/me` | Bearer JWT | Current user profile (rate-limited 30/min) |
-| `GET /api/v1/users` | `manage` (admin) | List dashboard accounts (email, role, active) |
-| `PATCH /api/v1/users/{id}` | `manage` (admin) | Enable/disable an account or change its role; disabled accounts are locked out of login and their existing JWTs stop working immediately; last-active-admin is protected (409) |
-| `GET /api/v1/telemetry/stats` | Bearer JWT | Dashboard counters (supports `?include_demo=true`) |
-| `GET /api/v1/telemetry/agents` | Bearer JWT | Agent inventory (supports `?include_demo=true`) |
-| `GET /api/v1/telemetry/alerts` | Bearer JWT | Alert list with filtering |
-| `GET /api/v1/telemetry/alerts/{id}` | Bearer JWT | Alert detail with telemetry, threat reports, remediations |
-| `POST /api/v1/telemetry/alerts/resolve-all` | Bearer JWT | Resolve all unresolved alerts |
-| `DELETE /api/v1/telemetry/alerts` | Bearer JWT | Delete all alerts |
-| `PATCH /api/v1/telemetry/alerts/{id}/resolve` | Bearer JWT (`triage` to resolve, `respond` to kill) | Resolve single alert with optional kill-process |
-| `GET /api/v1/telemetry/threat-reports` | Bearer JWT | AI-generated threat analysis reports |
-| `GET /api/v1/telemetry/remediations` | Bearer JWT | Auto-remediation action history |
-| `GET /api/v1/telemetry/recent` | Bearer JWT | Recent NodeTrace telemetry |
-| `GET /api/v1/telemetry/activity` | Bearer JWT | Mixed timeline (telemetry + alerts) |
-| `POST /api/v1/telemetry/report` | X-Agent-Id + Bearer | Agent telemetry report (creates alerts) |
-| `POST /api/v1/telemetry/heartbeat` | X-Agent-Id + Bearer | Agent heartbeat |
-| `GET /api/v1/telemetry/commands` | X-Agent-Id + Bearer | Agent command queue (Redis) |
-| `GET /api/v1/rules/` | Bearer JWT | List custom detection rules |
-| `POST /api/v1/rules/` | Bearer JWT (operator) | Create custom detection rule (regex safety-checked) |
-| `GET /api/v1/rules/static` | Bearer JWT | List static MITRE ATT&CK rules |
-| `GET /api/v1/discovery/status` | Bearer JWT | Current scan status |
-| `POST /api/v1/discovery/scan` | Bearer JWT | Network scan (CIDR, ports, ARP + ICMP sweep) |
-| `GET /api/v1/discovery/hosts` | Bearer JWT | List discovered hosts (vendor, MAC, agent status) |
-| `POST /api/v1/discovery/deploy` | Bearer JWT (`deploy`) | Removed (HTTP 410): credential-based deploy. Use `POST /api/v1/deploy/token` |
-| `POST /api/v1/deploy/token` | Bearer JWT (`deploy`) | Issue a short-lived enrollment token for signed one-line install |
-| `GET /api/v1/total/formats` | Bearer JWT | Accepted file-format catalog for Aegis Total |
-| `POST /api/v1/rules/replay/import` | Bearer JWT | Score an external JSONL corpus (benign/suspicious/malformed) with the real engine |
-| `GET /api/v1/ocsf/alerts` | Bearer JWT | Alerts as OCSF 1.4.0 Detection Findings (JSON or NDJSON) |
-| `POST /api/v1/ocsf/convert` | Bearer JWT | Convert a single Aegis event to OCSF |
-| `GET /api/v1/ocsf/schema` | Bearer JWT | OCSF mapping description for integrators |
-| `POST /api/v1/discovery/sync-agent-status` | Bearer JWT | Sync agent deployment states |
-| `GET /api/v1/osint/ip/{ip}` | Bearer JWT | IP reputation lookup (VT, Shodan, AbuseIPDB) with cache |
-| `GET /api/v1/osint/domain/{domain}` | Bearer JWT | Domain reputation lookup with cache |
-| `GET /api/v1/ws/overview` | `aegis_token` HttpOnly cookie | WebSocket counters snapshot every 30s (no token in the URL) |
-| `POST /api/v1/ai/chat` | Bearer JWT | AI chat with prompt injection detection |
-| `GET /api/v1/ai/threads` | Bearer JWT | List AI conversation threads |
-| `DELETE /api/v1/ai/threads/{id}` | Bearer JWT | Delete AI thread |
-| `GET /api/v1/soar/playbooks` | Bearer JWT | List SOAR playbooks |
-| `POST /api/v1/soar/playbooks` | Bearer JWT | Create SOAR playbook |
-| `PUT /api/v1/soar/playbooks/{id}` | Bearer JWT | Update SOAR playbook |
-| `DELETE /api/v1/soar/playbooks/{id}` | Bearer JWT | Delete SOAR playbook |
-| `GET /api/v1/soar/playbook-executions` | Bearer JWT | List all playbook execution history |
-| `GET /api/v1/syslog/events` | Bearer JWT | Query syslog events (severity, hostname, app filter) |
-| `POST /api/v1/ingest/{source}` | Bearer JWT / API key | Ingest raw log lines or JSON events; parsed + normalized + detected |
-| `POST /api/v1/ingest/test` | Bearer JWT | Dry-run a parser on a payload — nothing is stored |
-| `GET /api/v1/ingest/catalog` | Bearer JWT | Parser catalog (single source of truth for the UI) |
-| `GET /api/v1/ingest/sources` | Bearer JWT | Configured log sources with health (last event, unparsed, last error) |
-| `POST /api/v1/ingest/sources` | Bearer JWT (`operator`) | Register a log source |
-| `GET /api/v1/ingest/stats` | Bearer JWT | Ingestion stats (EPS, by source/severity) |
-| `GET /api/v1/ingest/detection-coverage` | Bearer JWT | Loaded vs. executable Sigma/correlation rules + exclusions |
-| `POST /api/v1/search/events` | Bearer JWT | Structured event search (allowlisted fields, escaped text) |
-| `GET /api/v1/search/events` | Bearer JWT | Simple event search (shareable URLs) |
-| `GET /api/v1/search/fields` | Bearer JWT | Searchable fields with descriptions |
-| `GET /api/v1/search/stats` | Bearer JWT | Event statistics over a time window |
-| `GET /api/v1/audit/logs` | Bearer JWT | List audit log entries |
-| `POST /api/v1/enroll/enroll` | enrollment key | Agent enrollment with key validation |
-| `POST /api/v1/vault/notes` | Bearer JWT | Create encrypted note (AES-256-GCM) |
-| `GET /api/v1/vault/notes` | Bearer JWT | List note titles (encrypted) |
-| `GET /api/v1/vault/notes/{id}` | Bearer JWT | Read decrypted note |
-| `DELETE /api/v1/vault/notes/{id}` | Bearer JWT | Delete note |
-| `POST /register` | enrollment key | NodeTrace compatibility registration |
-| `POST /update` | agent Bearer token | NodeTrace telemetry upload |
+| `POST /auth/register` | none (or admin if registration closed) | Create dashboard user (validated, rate-limited) |
+| `POST /auth/login` | none | Get JWT (rate-limited + per-account throttle); `remember: true` issues a 30-day device-trust cookie |
+| `POST /auth/refresh` | session cookie | Silent session renewal (new JWT + cookie, same user) |
+| `POST /auth/remember` | `aegis_remember` HttpOnly cookie | Silent re-login from a trusted device; rotates the device token on every use |
+| `GET /auth/devices` | Bearer JWT | List trusted devices with last-used timestamps |
+| `DELETE /auth/devices/{id}` | Bearer JWT | Revoke a trusted device; its cookie dies at next use |
+| `POST /auth/logout` | Bearer JWT | Blacklist token, clear cookie, end device trust |
+| `GET /auth/me` | Bearer JWT | Current user profile (30/min) |
+| `GET /users` · `PATCH /users/{id}` | `manage` (admin) | List accounts; enable/disable or change role (disabled = immediate lockout; last-active-admin protected, 409) |
+| `GET /telemetry/stats` · `/agents` · `/alerts` | Bearer JWT | Dashboard counters, agent inventory, alert list (filtering, `?include_demo=true`) |
+| `GET /telemetry/alerts/{id}` | Bearer JWT | Alert detail with telemetry, threat reports, remediations |
+| `PATCH /telemetry/alerts/{id}/resolve` | `triage` / `respond` | Resolve single alert with optional kill-process |
+| `POST /telemetry/alerts/resolve-all` · `DELETE /telemetry/alerts` | Bearer JWT | Bulk resolve / delete (audit-logged) |
+| `GET /telemetry/threat-reports` · `/remediations` · `/recent` · `/activity` | Bearer JWT | AI threat reports, remediation history, recent telemetry, mixed timeline |
+| `POST /telemetry/report` · `/report/batch` | X-Agent-Id + Bearer | Agent telemetry report(s) (creates alerts) |
+| `POST /telemetry/heartbeat` · `GET /telemetry/commands` | X-Agent-Id + Bearer | Agent heartbeat; command queue (Redis) |
+| `GET /rules/` · `POST /rules/` | Bearer JWT (operator) | Custom detection rules CRUD (regex safety-checked) |
+| `GET /rules/static` · `POST /rules/test` | Bearer JWT | Static MITRE rules; test rules against sample events |
+| `POST /rules/replay/import` | Bearer JWT | Score an external JSONL corpus (benign/suspicious/malformed) with the real engine |
+| `GET /discovery/status` · `POST /discovery/scan` · `GET /discovery/hosts` | Bearer JWT | Network discovery (CIDR, ports, ARP + ICMP sweep) |
+| `POST /discovery/deploy` | — | Removed (HTTP 410): use `POST /deploy/token` |
+| `POST /deploy/token` | `deploy` | Issue a short-lived enrollment token for signed one-line install |
+| `POST /discovery/sync-agent-status` | Bearer JWT | Sync discovered-host agent states |
+| `GET /total/formats` · `POST /total/upload` | Bearer JWT | Aegis Total format catalog and sample analysis |
+| `GET /ocsf/alerts` | Bearer JWT | Alerts as OCSF 1.4.0 Detection Findings (JSON or NDJSON `?download=true`) |
+| `POST /ocsf/convert` · `GET /ocsf/schema` | Bearer JWT | Convert a single event to OCSF; mapping description for integrators |
+| `GET /osint/ip/{ip}` · `/osint/domain/{domain}` | Bearer JWT | Reputation lookups (VT, Shodan, AbuseIPDB) with cache |
+| `GET /ws/overview` · `GET /ws/alerts` | `aegis_token` cookie | WebSocket counters snapshot (30s); realtime alert push — no tokens in URLs |
+| `POST /ai/chat` · `GET /ai/threads` · `GET|PUT /ai/settings` · `GET /ai/status` | Bearer JWT | AI chat with prompt-injection detection; threads; provider/model selection; effective status |
+| `GET /soar/playbooks` · `POST` · `PUT /{id}` · `DELETE /{id}` | Bearer JWT | SOAR playbook CRUD |
+| `GET /soar/playbook-executions` | Bearer JWT | Playbook execution history |
+| `GET /syslog/events` | Bearer JWT | Query syslog events (severity, hostname, app filter) |
+| `POST /ingest/{source}` · `POST /ingest/test` | Bearer JWT / API key | Ingest raw logs (parsed + normalized + detected); parser dry-run — nothing stored |
+| `GET /ingest/catalog` · `/sources` · `/stats` · `/detection-coverage` | Bearer JWT | Parser catalog; source health (last event, unparsed, last error); ingestion stats (EPS, by source/severity); loaded vs executable Sigma/correlation rules + exclusions |
+| `POST /ingest/sources` | `operator` | Register a log source |
+| `POST /search/events` · `GET /search/events` · `/fields` · `/stats` | Bearer JWT | Structured search (allowlisted fields, escaped text); shareable-link variant; searchable fields; event statistics |
+| `GET /audit/logs` | Bearer JWT | Audit log entries |
+| `POST /enroll/enroll` · `POST /register` · `POST /update` | enrollment key / agent token | Agent enrollment; NodeTrace compatibility registration; telemetry upload |
+| `POST /vault/notes` · `GET` · `GET /{id}` · `DELETE /{id}` | Bearer JWT | Encrypted notes CRUD (AES-256-GCM) |
+| `GET /telegram/settings` · `PUT` · `POST /telegram/test` | Bearer JWT (`manage` for writes) | Telegram notification config and live test message |
+
+---
+
+## Configuration
+
+Key environment variables (full list in `.env.example`):
+
+| Variable | Default | Description |
+|----------|---------|-------------|
+| `AEGIS_API_KEY` | placeholder | Gateway/automation API key (never grants dashboard access) |
+| `AGENT_ENROLL_KEY` | placeholder | Agent enrollment key |
+| `JWT_SECRET` | placeholder | Session signing secret (≥ 32 chars) |
+| `MASTER_KEY_B64` | placeholder | Base64 32-byte KEK for encrypted settings (integration keys, VaultX) |
+| `POSTGRES_PASSWORD` / `REDIS_PASSWORD` | placeholder | Service credentials (required by compose) |
+| `DEBUG` | `false` | SQL echo and dev validations — must stay `false` in production |
+| `ALLOW_OPEN_REGISTRATION` | `false` | Self-service registration (the brain refuses invalid production combos) |
+| `COOKIE_SECURE` | `true` | Secure flag on auth cookies — set `false` only for local HTTP |
+| `SYSLOG_ENABLED` | `false` | UDP/TCP syslog listener (binds `127.0.0.1` unless `SYSLOG_BIND` widened) |
+| `AI_PROVIDER` / `AI_MODEL` | `auto` / `""` | AI provider and model (dashboard wins unless explicitly pinned here) |
+| `AI_AUTOMATIC_ENRICH` | `false` | Automatic alert enrichment toward a **cloud** provider |
+| `AEGIS_WITH_AI` | unset | Set `1` to add the Ollama service to the stack |
+| `OLLAMA_URL` | in-stack | Point at a powerful LAN machine to keep AI local with big models |
+| `AEGIS_ETW_ENABLED` | `true` on Windows | Spawns the ETW kernel collector from Guard |
+| `PLAYBOOK_SCRIPT_ENABLED` | `false` | Shell `script` SOAR actions (keep off unless enterprise-approved) |
+| `RATE_LIMIT_STORAGE_URI` | memory | `redis://…` for multi-worker/HA rate limiting |
+
+---
 
 ## Security Notes
 
 This project is designed for local security labs and development. Before production use:
 
 - Replace every default secret in `.env`.
-- Set `DEBUG=false` and `ALLOW_OPEN_REGISTRATION=false` (the brain refuses to
-  start otherwise); for enterprise also `ENTERPRISE_STRICT=true` with
-  `MTLS_MODE=required` (refused at startup if missing).
-- Keep playbook `script` actions disabled (`PLAYBOOK_SCRIPT_ENABLED=false`,
-  default) unless enterprise-approved: they execute shell on the server.
+- Set `DEBUG=false` and `ALLOW_OPEN_REGISTRATION=false` (the brain refuses to start otherwise); for enterprise also `ENTERPRISE_STRICT=true` with `MTLS_MODE=required` (refused at startup if missing).
+- Keep playbook `script` actions disabled (`PLAYBOOK_SCRIPT_ENABLED=false`, default) unless enterprise-approved: they execute shell on the server.
 - For production, use `docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d` to avoid exposing Postgres/Redis ports.
 - Replace Caddy `tls internal` with proper TLS certificates (Let's Encrypt).
-- Store JWTs in a safer browser session model than long-lived `localStorage` tokens.
-- **Remember-me done defensively**: the device cookie carries only an opaque token (server keeps the SHA-256), it is **rotated on every use** so a stolen cookie replays exactly once, it is scoped to the auth paths (it never rides along on data requests), it sits behind the same origin/CSRF gate as the session cookie, and every device is listed and revocable from **Settings → Trusted Devices**. Logging out ends the trust too — the model is GitHub's, not "forever sessions".
 - Use incremental Alembic migrations for all schema changes (migrations are idempotent).
 - Keep `AEGIS_LOG_LEVEL=INFO` or stricter in production.
+- **Remember-me is done defensively**: opaque token + server-side SHA-256, rotated on every use, scoped to the auth paths, behind the same origin/CSRF gate as the session cookie, listed and revocable from the dashboard.
 
 Use this software only on systems where you have explicit permission.
 
+---
+
 ## Pilot & Enterprise Readiness
 
-Classification: **advanced prototype** (see `docs/os-validation/NOT-RUN.md` for what is actually validated).
-
-```cmd
-REM Preflight host (Windows) / sh scripts/os-preflight.sh (Linux)
+```bash
+# OS preflight (Windows) / sh scripts/os-preflight.sh (Linux)
 powershell -ExecutionPolicy Bypass -File scripts/os-preflight.ps1
 
-REM Preflight tool di sviluppo (python/node/java/docker/porte)
+# Dev-tool preflight (python/node/java/docker/ports)
 python scripts/dev_preflight.py
 
-REM Detection replay on 3 independent splits (training/validation/regression)
+# Detection replay on 3 independent splits (training/validation/regression)
 python scripts/replay_report.py --all
 
-REM Threshold calibration report (synthetic panel, not fleet baseline)
+# Threshold calibration report (synthetic panel, not fleet baseline)
 python scripts/calibrate_thresholds.py
 
-REM API smoke against live stack
+# API smoke against the live stack
 python scripts/api_smoke.py [--base http://127.0.0.1:8000]
 
-REM Pilot soak: N synthetic agents for T seconds (dev DB only)
+# Pilot soak: N synthetic agents for T seconds (dev DB only)
 python scripts/pilot_soak.py --agents 10 --duration 300
 
-REM Browser E2E (needs: npm i, playwright chromium, live stack)
+# Browser E2E (needs: npm i, playwright chromium, live stack)
 cd frontend && npm run e2e
 
-REM Full audit: machine JSON + human report
+# Full audit: machine JSON + human report
 python scripts/audit_report.py
 ```
 
@@ -589,18 +484,51 @@ python scripts/audit_report.py
 | HA runbook + overlay | `docs/HA.md`, `docker-compose.ha.yml` |
 | Benchmark method + numbers | `docs/BENCHMARK.md` |
 | Operations (profiles, secrets, PKI) | `docs/OPERATIONS.md` |
+| Threat model | `docs/THREAT_MODEL.md` |
 
-Production profile: `docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d`
-(requires `BACKUP_PASSPHRASE`; Postgres/Redis not published). HA overlay adds
-resource limits and scale-readiness (`--scale aegis-brain=2`).
+Production profile: `docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d` (requires `BACKUP_PASSPHRASE`; Postgres/Redis not published). The HA overlay adds resource limits and scale-readiness (`--scale aegis-brain=2`).
 
-## References
+---
 
-| Documento | Path |
-|-----------|------|
-| Operazioni (profili, segreti, PKI) | `docs/OPERATIONS.md` |
-| Runbook pilot e HA | `docs/PILOT_RUNBOOK.md`, `docs/HA.md` |
-| Validazione OS | `docs/os-validation/` |
-| Benchmark e modello minacce | `docs/BENCHMARK.md`, `docs/THREAT_MODEL.md` |
-| Setup aegis-brain | `aegis-brain/SETUP.md` |
-| Setup frontend | `frontend/README.md` |
+## Development
+
+### Project Structure
+
+```
+aegis-ecosystem/
+├── aegis-brain/             # FastAPI brain: API, detection, SIEM, SOAR, Total
+│   ├── app/api/v1/          # REST endpoints (auth, telemetry, ingest, search…)
+│   ├── app/services/        # telemetry, sigma, correlation, notifier, total
+│   ├── app/rules/           # static rules + Sigma engine
+│   ├── alembic/versions/    # DB migrations
+│   └── tests/               # 740+ pytest (CI-verified)
+├── aegis-link/              # Spring Boot ingestion gateway
+├── aegis-guard/             # Java endpoint agent (processes, FIM, remediation)
+│   └── install/windows/     # NSSM service installer/uninstaller
+├── NodeTrace/               # Python telemetry agent
+│   └── agents/python/       # PyInstaller standalone build
+├── aegis-ebpf/              # eBPF probes (Linux) + ETW collector (Windows)
+├── frontend/                # React 19 / TypeScript dashboard
+│   ├── src/components/      # pages, common widgets
+│   ├── src/hooks/           # realtime WS, session renewal, notifications
+│   └── e2e/                 # Playwright browser tests
+├── scripts/                 # setup.py, batteries, preflights, audit tools
+├── docs/                    # operations, HA, benchmarks, threat model
+├── docker-compose*.yml      # lab / prod / mTLS / observability / HA overlays
+└── .github/workflows/       # CI: lint, tests, secret scan, Trivy, SBOM
+```
+
+### CI/CD
+
+GitHub Actions runs on every push: lint (flake8 + ESLint), secret scanning, event-contract checks, Windows installer checks, OS-compat matrix (ubuntu + windows), brain + guard + frontend tests, pip-audit, Trivy image scanning (strict on images we build, informational on upstream images), and SBOM generation. Release jobs run on tags.
+
+---
+
+<p align="center">
+  <strong>Authorized use only.</strong> Aegis is a defensive security platform intended for<br/>
+  systems you own or have explicit written permission to monitor.
+</p>
+
+<p align="center">
+  Built with ❤️ by <a href="https://github.com/Terminalkid09">Terminalkid09</a>
+</p>
